# PyFastApi

./: .gitignore  CalcuclatorInterface.py  Calculator.py  README.md  main.py  pyproject.toml  repository.py  test_calculator.py
