[tool.poetry]
name = "DemoPoetry"
version = "0.1.0"
description = "Demo project"
authors = ["Joni"]
license = "none"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
